--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
       <span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">What We Offer</span>
     </div>
     <div class="w3-col l3 m6 w3-light-grey w3-container w3-padding-16">
-      <h3>Design</h3>
-      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+      <h3>Mi Primer DashBoard</h3>
+      <p>En este espacio esta disponible el primer Dashboard, creado en la semanaII, sobre el Covid-19.</p>
     </div>
 
     <div class="w3-col l3 m6 w3-grey w3-container w3-padding-16">
