--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Master Análisis de datos: Visualización</title>
+<title>W3.CSS Template</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -36,14 +36,14 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
 <div class="w3-content" style="max-width:1100px;margin-top:80px;margin-bottom:80px">
 
   <div class="w3-panel">
-    <h1><b>MARKETING</b></h1>
+    <h1><b>MAESTRIA ANALISIS DE DATOS: VISUALIZACIÓN</b></h1>
     <p>Template by w3.css</p>
   </div>
 
   <!-- Slideshow -->
   <div class="w3-container">
     <div class="w3-display-container mySlides">
-      <img src="gsanabriam/img/img1.jpg">
+      <img src="/w3images/coffee.jpg" style="width:100%">
       <div class="w3-display-topleft w3-container w3-padding-32">
         <span class="w3-white w3-padding-large w3-animate-bottom">Lorem ipsum</span>
       </div>
@@ -80,8 +80,8 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
       <span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">What We Offer</span>
     </div>
     <div class="w3-col l3 m6 w3-light-grey w3-container w3-padding-16">
-      <h3>Mi Primer DashBoard</h3>
-      <p>En este espacio esta disponible el primer Dashboard, creado en la semanaII, sobre el Covid-19.</p>
+      <h3>Design</h3>
+      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
     </div>
 
     <div class="w3-col l3 m6 w3-grey w3-container w3-padding-16">
@@ -278,5 +278,3 @@ function showDivs(n) {
 
 </body>
 </html>
-
-
