--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body, html {
 .bgimg {
   background-position: center;
   background-size: cover;
-  background-image: url("https://raw.githubusercontent.com/gsanabriam/gsanabriam.github.io/master/Img/img2.png");
+  background-image: url("https://raw.githubusercontent.com/gsanabriam/gsanabriam.github.io/master/Img/img3.jpg");
   min-height: 75%;
 }
 
