--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
 <style>
 body, html {
-  height: 80%;
+  height: 100%;
   font-family: "Inconsolata", sans-serif;
 }
 
@@ -15,7 +15,7 @@ body, html {
   background-position: center;
   background-size: cover;
   background-image: url("https://raw.githubusercontent.com/gsanabriam/gsanabriam.github.io/master/Img/img3.jpg");
-  min-height: 75%;
+  min-height: 100%;
 }
 
 .menu {
@@ -48,7 +48,7 @@ body, html {
     <span class="w3-tag">Gina Paola Sanabria Maldonado</span>
   </div>
   <div class="w3-display-middle w3-center">
-    <span class="w3-text-white" style="font-size:50px"><p style="color:#FF0000";>Maestría Análisis de datos: Visualización</p></span>
+    <span class="w3-text-white" style="font-size:50px"><p style="color:black;">Maestría Análisis de datos: Visualización</p></span>
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
     <span class="w3-text-white">
