--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ body, html {
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">EN ESTE ESPACIO</span></h5>
     <p>En este espacio se publicarán todos proyectos construidos con base al conocimiento adquirido en el curso de visualización de datos</p>    
-    <img src="https://raw.githubusercontent.com/gsanabriam/gsanabriam.github.io/master/Img/img4.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
+    <img src="https://raw.githubusercontent.com/gsanabriam/gsanabriam.github.io/master/Img/img3.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
   </div>
 </div>
 
@@ -89,7 +89,7 @@ body, html {
     </div>
 
     <div id="Dashboard" class="w3-container menu w3-padding-48 w3-card">
-      <h5>Dashboard Covid-19/h5>
+      <h5>Dashboard Covid-19</h5>
       <p class="w3-text-grey">Este Dashboard fue contruido con información publicada directamente en la página de datos abiertos, con datos del Covid-19, que se actualiza
           a diario. En este Dashboard se implemento conocimiento de matplotlib y Widgets, donde se puede interacturar con los diferentes estados del Covid-19 y su evolución
           mes a mes.
