--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ body, html {
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">EN ESTE ESPACIO</span></h5>
     <p>En este espacio se publicarán todos proyectos construidos con base al conocimiento adquirido en el curso de visualización de datos</p>    
-    <img src="https://raw.githubusercontent.com/gsanabriam/gsanabriam.github.io/master/Img/img3.jpg" style="width:100%;max-width:500px" class="w3-margin-top">
+    <img src="https://raw.githubusercontent.com/gsanabriam/gsanabriam.github.io/master/Img/img3.jpg" style="width:50%;max-width:1000px" class="w3-margin-top">
   </div>
 </div>
 
@@ -99,7 +99,7 @@ body, html {
     <div id="Drinks" class="w3-container menu w3-padding-48 w3-card">
       <h5>Consulta: ypywidgets </h5>
       <p class="w3-text-grey">
-        <META HTTP-EQUIV="REFRESH" CONTENT="5;URL=https://ipywidgets.readthedocs.io/en/latest/"> hola mundo
+        <link rel="stylesheet" href="https://ipywidgets.readthedocs.io/en/latest/"> hola mundo
       </p><br>
     
       <h5>Chocolato</h5>
