--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ body, html {
     <div id="Drinks" class="w3-container menu w3-padding-48 w3-card">
       <h5>Consulta: ypywidgets </h5>
       <p class="w3-text-grey">
-        <link rel="stylesheet" href="https://ipywidgets.readthedocs.io/en/latest/"> hola mundo
+          <a href="https://ipywidgets.readthedocs.io/en/latest/">En este link se puede consultar todo sobre el uso de los Widgets en python</a>
       </p><br>
     
       <h5>Chocolato</h5>
